--- a/index.html
+++ b/index.html
@@ -32,33 +32,21 @@
 	<section class="taglineBlock">
 		<div class="container mt-5">
 			<div class="table-responsive">
-				<table class="table table-striped table-dark  table-hover">
+				<table class="table table-striped table-dark table-hover" id="table-data">
 					<thead class="thead-dark">
 						<tr>
-						  <th scope="col">#</th>
-						  <th scope="col">Nombres</th>
-						  <th scope="col">Correo @</th>
-						  <th scope="col">Monto S/.</th>
-						  <th scope="col">Estado</th>
-						  <th scope="col">Fecha</th>
-						  <th scope="col" class="text-center">Opciones</th>
+						<th scope="col">#</th>
+						<th scope="col">Nombres</th>
+						<th scope="col">Correo @</th>
+						<th scope="col">Monto S/.</th>
+						<th scope="col">Estado</th>
+						<th scope="col">Fecha</th>
+						<th scope="col" class="text-center">Opciones</th>
 
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-						  <th scope="row">1</th>
-						  <td>Mark</td>
-						  <td>Otto</td>
-						  <td>Otto</td>
-						  <td>Otto</td>
-						  <td>@mdo</td>
-						  <td class="text-center">
-							<button type="button" class="btn btn-success mr-1"><i class='bx bxs-edit'></i></button>
-							<button type="button" class="btn btn-danger"><i class='bx bx-stop-circle'></i></button>
-						  </td>
-						</tr>
-				  	</tbody>
+					</tbody>
 				</table>
 			</div>
 	 
@@ -70,6 +58,7 @@
 	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="assets/js/main.js"></script>
  	<!--===== SCROLL REVEAL =====-->
 	<script src="https://unpkg.com/scrollreveal"></script>
  	<script type="text/javascript">
