--- a/index.html
+++ b/index.html
@@ -35,21 +35,24 @@
 				<table class="table table-striped table-dark table-hover" id="table-data">
 					<thead class="thead-dark">
 						<tr>
-						<th scope="col">#</th>
-						<th scope="col">Nombres</th>
-						<th scope="col">Correo @</th>
-						<th scope="col">Monto S/.</th>
-						<th scope="col">Estado</th>
-						<th scope="col">Fecha</th>
-						<th scope="col" class="text-center">Opciones</th>
-
+							<th scope="col">#</th>
+							<th scope="col">Nombres</th>
+							<th scope="col">Correo @</th>
+							<th scope="col">Monto S/.</th>
+							<th scope="col">Estado</th>
+							<th scope="col">Fecha</th>
+							<th scope="col" class="text-center">Opciones</th>
 						</tr>
 					</thead>
 					<tbody>
 					</tbody>
 				</table>
 			</div>
-	 
+	 		<div class="d-flex justify-content-center">
+				<div class="spinner-grow text-light" role="status">
+  <span class="sr-only">Loading...</span>
+</div>
+			</div>
  
 		</div>
 	</section>
