--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
 			</form>
 		</nav>
 	</header>
-
+	<section class="taglineBlock">
+		<div class="container mt-5">
+			<!-- Button trigger modal -->
+			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+			 Nuevo
+			</button>
+		</div>
+	</section>
 	<section class="taglineBlock">
 		<div class="container mt-5">
 			<div class="table-responsive">
@@ -48,7 +55,7 @@
 					</tbody>
 				</table>
 			</div>
-	 		<div class="d-flex justify-content-center">
+			<div class="d-flex justify-content-center">
 				<div class="spinner-grow text-light" role="status">
 				  <span class="sr-only">Loading...</span>
 				</div>
@@ -57,15 +64,39 @@
 		</div>
 	</section>
 
+	<!-- MODAL -->
+
+
+	<!-- Modal -->
+	<div class="modal fade" id="exampleModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+		<div class="modal-content">
+		  <div class="modal-header">
+			<h5 class="modal-title" id="exampleModalLabel">Registrar</h5>
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			  <span aria-hidden="true">&times;</span>
+			</button>
+		  </div>
+		  <div class="modal-body">
+			...
+		  </div>
+		  <div class="modal-footer">
+			<button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+			<button type="button" class="btn btn-primary">Guadar</button>
+		  </div>
+		</div>
+	  </div>
+	</div>
+
 
 	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/js/main.js"></script>
- 	<!--===== SCROLL REVEAL =====-->
+	<!--===== SCROLL REVEAL =====-->
 	<script src="https://unpkg.com/scrollreveal"></script>
- 	<script type="text/javascript">
- 		const sr = ScrollReveal({
+	<script type="text/javascript">
+		const sr = ScrollReveal({
 			origin: 'top',
 			distance: '80px',
 			duration: 2000,
@@ -74,7 +105,10 @@
 		sr.reveal('.headlineBlock');
 		sr.reveal('.taglineBlock', { delay: 500 });
 
- 	</script>
+		// -------------------
+		 
+
+	</script>
 </body>
 </html>
 
