--- a/index.html
+++ b/index.html
@@ -77,9 +77,24 @@
 			  <span aria-hidden="true">&times;</span>
 			</button>
 		  </div>
-		  <div class="modal-body">
-			...
-		  </div>
+			<div class="modal-body">
+				<form>
+				  <div class="form-group">
+					<label for="exampleInputEmail1">Nombre</label>
+					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+					<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+				  </div>
+				  <div class="form-group">
+					<label for="exampleInputPassword1">Correo</label>
+					<input type="input" class="form-control" id="exampleInputPassword1">
+				  </div>
+				   <div class="form-group">
+					<label for="exampleInputPassword1">Monto</label>
+					<input type="input" class="form-control" id="exampleInputPassword1">
+				  </div>
+				   
+				</form>
+			</div>
 		  <div class="modal-footer">
 			<button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
 			<button type="button" class="btn btn-primary">Guadar</button>
