--- a/index.html
+++ b/index.html
@@ -23,14 +23,18 @@
 		<nav class="navbar navbar-dark bg-dark">
 			<a class="navbar-brand">CRUD</a>
 			<form class="form-inline">
-				<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
-				<button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
+				<button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Dark Mode</button>
 			</form>
 		</nav>
 	</header>
 	<section class="taglineBlock">
 		<div class="container mt-5">
 			<!-- Button trigger modal -->
+			<form class="form-inline">
+				<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Buscar">
+				<button class="btn btn-outline-info my-2 my-sm-0" type="submit">Buscar</button>
+			</form>
+
 			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
 			 Nuevo
 			</button>
@@ -40,14 +44,14 @@
 		<div class="container mt-5">
 			<div class="table-responsive">
 				<table class="table table-striped table-dark table-hover" id="table-data">
-					<thead class="thead-dark">
-						<tr>
+					<thead >
+						<tr class="bg-primary text-white">
 							<th scope="col">#</th>
 							<th scope="col">Nombres</th>
-							<th scope="col">Correo @</th>
-							<th scope="col">Monto S/.</th>
-							<th scope="col">Estado</th>
-							<th scope="col">Fecha</th>
+							<th scope="col" class="text-center">Correo @</th>
+							<th scope="col" class="text-center">Monto S/.</th>
+							<th scope="col" class="text-center">Estado</th>
+							<th scope="col" class="text-center">Fecha</th>
 							<th scope="col" class="text-center">Opciones</th>
 						</tr>
 					</thead>
