--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<!-- Button trigger modal -->
 			<div class="row  ">
 				<div class="col-md-2 mr-auto">
-					<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+					<button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#exampleModal">
 							<i class='bx bx-plus-medical'></i> Nuevo
 					</button>
 				</div>
@@ -47,7 +47,7 @@
 								<input type="text" class="form-control" id="inlineFormInputName" placeholder="Buscar">
 							</div>
 							<div class="col-md-2 col-auto my-1">
-								 <button type="submit" class="btn btn-primary"><i class='bx bx-search-alt' ></i></button>
+								 <button type="submit" class="btn btn-outline-primary"><i class='bx bx-search-alt' ></i></button>
 							</div>
 						</div>
 					</form>
