--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 	<!-- Modal -->
 	<div class="modal fade" id="exampleModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 	  <div class="modal-dialog">
-		<div class="modal-content">
+		<div class="modal-content bg-dark">
 		  <div class="modal-header">
-			<h5 class="modal-title" id="exampleModalLabel">Registrar</h5>
-			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+			<h5 class="modal-title text-white" id="exampleModalLabel">Registrar</h5>
+			<button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
 			  <span aria-hidden="true">&times;</span>
 			</button>
 		  </div>
-			<div class="modal-body">
+			<div class="modal-body text-white">
 				<form>
 				  <div class="form-group">
 					<label for="exampleInputEmail1">Nombre</label>
@@ -116,8 +116,8 @@
 				</form>
 			</div>
 		  <div class="modal-footer">
-			<button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-			<button type="button" class="btn btn-primary">Guadar</button>
+			<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
+			<button type="button" class="btn btn-outline-primary">Guadar</button>
 		  </div>
 		</div>
 	  </div>
