--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 				<div class="col-md-4">
 					<form>
 						<div class="form-row">
-							<div class="col-md-10 my-1 ">
+							<div class="col-md-10 my-1 col-10">
 								<label class="sr-only" for="inlineFormInputName">Name</label>
 								<input type="text" class="form-control" id="inlineFormInputName" placeholder="Buscar">
 							</div>
 							<div class="col-md-2 col-auto my-1">
-								 <button type="submit" class="btn btn-outline-primary"><i class='bx bx-search-alt' ></i></button>
+								 <button type="submit" class="btn btn-outline-primary"><i class='bx bx-search-alt'></i></button>
 							</div>
 						</div>
 					</form>
