--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	 
 
 	<section class="taglineBlock">
-		<div class="container mt-5 ">
+		<div class="container mt-4 ">
 			<!-- Button trigger modal -->
 			<div class="row  ">
 				<div class="col-md-2 mr-auto">
@@ -39,7 +39,7 @@
 					</button>
 				</div>
 
-				<div class="col-md-4">
+				<div class="col-md-4 mobile-space">
 					<form>
 						<div class="form-row">
 							<div class="col-md-10 my-1 col-10">
@@ -57,7 +57,7 @@
 	</section>
 
 	<section class="taglineBlock">
-		<div class="container mt-5">
+		<div class="container mt-2">
 			<div class="table-responsive">
 				<table class="table table-striped table-dark table-hover" id="table-data">
 					<thead >
