--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 		</div>
 	</section>
 
+	<!-- ---------------- -->
 	<section class="taglineBlock">
-		<div class="container mt-2">
+		<div class="container my-2">
 			<div class="table-responsive">
 				<table class="table table-striped table-dark table-hover" id="table-data">
 					<thead >
@@ -80,40 +81,50 @@
 				  <span class="sr-only">Loading...</span>
 				</div>
 			</div>
- 
 		</div>
 	</section>
 
+	<!-- ---------------- -->
+	<footer class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="mx-auto">
+					2021
+				</div>
+			</div>
+		</div>
+	</footer>
+
 	<!-- MODAL -->
-
-
-	<!-- Modal -->
+ 
 	<div class="modal fade" id="exampleModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-	  <div class="modal-dialog">
+	  <div class="modal-dialog ">
 		<div class="modal-content bg-dark">
-		  <div class="modal-header">
+		  <div class="modal-header bg-primary">
 			<h5 class="modal-title text-white" id="exampleModalLabel">Registrar</h5>
 			<button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
 			  <span aria-hidden="true">&times;</span>
 			</button>
 		  </div>
 			<div class="modal-body text-white">
-				<form>
-				  <div class="form-group">
-					<label for="exampleInputEmail1">Nombre</label>
-					<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-					<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-				  </div>
-				  <div class="form-group">
-					<label for="exampleInputPassword1">Correo</label>
-					<input type="input" class="form-control" id="exampleInputPassword1">
-				  </div>
-				   <div class="form-group">
-					<label for="exampleInputPassword1">Monto</label>
-					<input type="input" class="form-control" id="exampleInputPassword1">
-				  </div>
-				   
-				</form>
+				<div class="container-fluid">
+					<form>
+					  <div class="form-group">
+						<label for="exampleInputEmail1">Nombre</label>
+						<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+						<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+					  </div>
+					  <div class="form-group">
+						<label for="exampleInputPassword1">Correo</label>
+						<input type="input" class="form-control" id="exampleInputPassword1">
+					  </div>
+					   <div class="form-group">
+						<label for="exampleInputPassword1">Monto</label>
+						<input type="input" class="form-control" id="exampleInputPassword1">
+					  </div>
+					   
+					</form>
+				</div>
 			</div>
 		  <div class="modal-footer">
 			<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
@@ -122,7 +133,7 @@
 		</div>
 	  </div>
 	</div>
-
+ 
 
 	<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
