--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-	<meta http-equiv="Pragma" content="no-cache" />
-	<meta http-equiv="Expires" content="0" />
-
+	
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 	<!-- =====BOX ICONS===== -->
@@ -26,7 +23,7 @@
 		<nav class="navbar navbar-dark bg-dark">
 			<a class="navbar-brand">GESTION PERSONA</a>
 		 
-			<button class="btn btn-outline-warning my-2 my-sm-0" type="button" id="dark-change">Dark Mode</button>
+			<button class="btn btn-outline-warning my-2 my-sm-0" type="button" id="dark-change"><i class='bx bx-certification bx-tada' ></i></button>
 		</nav>
 	</header>
 
