--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- https://higorr.pe/api/checkTestLista/55140268 -->
 
 	<header class="container mt-5">
-		<nav class="navbar navbar-dark bg-dark">
+		<nav class="navbar navbar-dark bg-dark rounded">
 			<a class="navbar-brand">GESTION PERSONA</a>
 		 
 			<button class="btn btn-outline-warning my-2 my-sm-0" type="button" id="dark-change"><i class='bx bxs-sun bx-tada' ></i></button>
@@ -60,8 +60,8 @@
 	<section class="taglineBlock">
 		<div class="container my-2">
 			<div class="table-responsive">
-				<table class="table table-striped table-dark table-hover" id="table-data">
-					<thead >
+				<table class="table table-striped table-dark table-hover rounded-bottom" id="table-data">
+					<thead class="rounded-top">
 						<tr class="bg-primary text-white">
 							<th scope="col">#</th>
 							<th scope="col">Nombres</th>
