--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<nav class="navbar navbar-dark bg-dark rounded">
 			<a class="navbar-brand">GESTION PERSONA</a>
 		 
-			<button class="btn btn-outline-warning my-2 my-sm-0" type="button" id="dark-change"><i class='bx bxs-sun bx-tada' ></i></button>
+			<button class="btn btn-outline-warning my-2 my-sm-0 text-white" type="button" id="dark-change"><i class='bx bxs-sun bx-tada' ></i></button>
 		</nav>
 	</header>
 
