--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
  </head>
  <body class="headlineBlock">
 
-	<!-- https://higorr.pe/api/checkTestLista/55140268 -->
-
 	<header class="container mt-5">
 		<nav class="navbar navbar-dark bg-dark rounded">
 			<a class="navbar-brand">GESTION PERSONA</a>
@@ -110,17 +108,17 @@
 				<div class="container-fluid">
 					<form id="my-form" class="add-post-form" method="POST">
 					  <div class="form-group">
-						<label for="exampleInputEmail1">Nombre</label>
-						<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+						<label for="nombreValue">Nombre</label>
+						<input type="text" class="form-control" id="nombreValue" aria-describedby="emailHelp">
 						<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
 					  </div>
 					  <div class="form-group">
-						<label for="exampleInputPassword1">Correo</label>
-						<input type="input" class="form-control" id="exampleInputPassword1">
+						<label for="emailValue">Correo</label>
+						<input type="email" class="form-control" id="emailValue">
 					  </div>
 					   <div class="form-group">
-						<label for="exampleInputPassword1">Monto</label>
-						<input type="input" class="form-control" id="exampleInputPassword1">
+						<label for="montoValue">Monto</label>
+						<input type="input" class="form-control" id="montoValue">
 					  </div>
 					   
 					</form>
